Fix a layout issue on Chrome for the basemaps

--- a/src/assets/_sass/components/_basemap-layer.scss
+++ b/src/assets/_sass/components/_basemap-layer.scss
@@ -4,7 +4,7 @@
   align-items: flex-start;
 
   > img {
-    flex-basis: 242px;
+    width: 242px;
     flex-shrink: 0;
     flex-grow: 0;
     margin-right: $margin_huge;
